syntax = "proto3";
option java_multiple_files = true;
package com.example.grpctest.grpc;

service ChatService {

  rpc Send (SendChatMessageRequest) returns (SendChatMessageResponse);
}

message SendChatMessageRequest {
  int64 message_id = 1;
  int64 room_id = 2;
  int64 sender_id = 3;
  string type = 4;
  string content = 5;
}

message SendChatMessageResponse {
  string result = 1;
}
